--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>20-ribbiter </title>
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dosis" />
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
